--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
     commands:
 
 #Static Application Security Scan (SAST scan) using SonarCloud
-     - mvn verify sonar:sonar -Dsonar.projectKey=johndevsecop -Dsonar.organization=JohnDevSecOp -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=d416cb6dec6ffe37006fdd83be9f0189af1c9295 
+     - mvn verify sonar:sonar -Dsonar.projectKey=sonarqube-devsecops-test -Dsonar.organization=sonarqube_devsecops_test -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=75b60512b13c03229933e64beb9db04193364c10 
 
 #Quality Gates for Static Application Security Scan(SAST) using SonarCloud
 
