--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,12 @@ phases:
     commands:
 
 #Static Application Security Scan (SAST scan) using SonarCloud
-     - mvn verify sonar:sonar -Dsonar.projectKey=sonarqube-devsecops-test -Dsonar.organization=sonarqube_devsecops_test -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=75b60512b13c03229933e64beb9db04193364c10 
+    - echo "Running static code analysis with SonarCloud"
+    - mvn verify sonar:sonar \
+          -Dsonar.projectKey=sonarqube-devsecops-test \
+          -Dsonar.organization=sonarqube-devsecops-test \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=75b60512b13c03229933e64beb9db04193364c10
 
 #Quality Gates for Static Application Security Scan(SAST) using SonarCloud
 
