--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,8 @@
 version: 0.2
 phases:
+  install:
+    runtime-versions:
+      java: latest
   build:
     commands:
 #Static Application Security Scan (SAST scan) using SonarCloud
