--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <properties>
+        <sonar.projectKey>tes-test_awsdevsecops</sonar.projectKey>
+        <sonar.organization>Test</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>commons-collections</groupId>
