--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,11 +2,8 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: latest
+      java: 17
   build:
     commands:
-#Static Application Security Scan (SAST scan) using SonarCloud
       - echo "Running static code analysis with SonarCloud"
-      - mvn verify sonar:sonar -Dsonar.projectKey=tes-test_awsdevsecops -Dsonar.organization=Test -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=bbf523e2d1b047b6102aeb2b178bd55adcdc3ca5
-
-
+      - mvn verify sonar:sonar -Dsonar.projectKey=awstest_testproject -Dsonar.organization=awstest -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=6996c0bd0e7055b92c575cbc8e86c6025505f35f
